# game-panel

./: LICENSE-MIT  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/.sqlx/: query-13b4170d400c9028b27ba90bac66fcc9b31c47562bb788505d7b779ad5672304.json  query-312410ce9bfcc3714fa091f06da6dc34f4eb785ff816f828cece86c5fe596ddf.json
backend/migrations/: 20230822000815_create_containers.sql
backend/src/: docker.rs  errors.rs  main.rs  utils.rs
backend/src/database/: maria.rs  mod.rs
backend/src/database/models/: container.rs  mod.rs
backend/src/routes/: container.rs  mod.rs
backend/src/routes/models/: container.rs
frontend/: .dockerignore  .env.example  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/routes/: +page.svelte  +page.ts
port-checker/: .gitignore  Cargo.toml  Dockerfile  README.md
port-checker/src/: main.rs
utils/: README.md
utils/docker/: docker-compose.yml
utils/scripts/: build_images.ps1
