[package]
name = "panel-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"

serde = "1.0.183"

rand = "0.8.5"

dotenvy = "0.15.7"

log = "0.4.20"
pretty_env_logger = "0.5.0"
