[package]
name = "panel-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"

openssl = { version = "0.10", features = ["vendored"] } # hate

sqlx = { version = "0.7.1", features = ["runtime-tokio", "tls-rustls", "mysql"] }

serde = "1.0.183"
serde_json = "1.0.105"

bollard = "0.14.0"

reqwest = "0.11.19"

futures = "0.3.28"
futures-util = "0.3.28"

uuid = { version = "1.4.1", features = ["v4"] }
rand = "0.8.5"

dotenvy = "0.15.7"
log = "0.4.20"
pretty_env_logger = "0.5.0"

thiserror = "1.0.47"
